tests/fail/13_break_outside_loop.lang
функция main() : целое {
    если (истина) {
        прервать;
    }
    вернуть 0;
}
